--- a/frontend/src/assets/styles/cmps/_taskDetails.scss
+++ b/frontend/src/assets/styles/cmps/_taskDetails.scss
@@ -181,6 +181,7 @@
                         padding: 6px 12px 6px 6px;
                         text-decoration: none;
                         padding-top: 10px;
+                        padding-left: 10px;
                         height: 35px;
                         .icon {
                             margin-left: 5px;
