--- a/frontend/src/assets/styles/cmps/_header.scss
+++ b/frontend/src/assets/styles/cmps/_header.scss
@@ -9,17 +9,20 @@
     opacity: 0.75;
     align-items: center;
 
-    > *{
+    > * {
+        height: 32px;
         margin-left: 10px;
         background-color: rgba(255, 255, 255, 0.151);
         border-radius: 3px;
         padding: 2px 10px;
     }
-    .home-link-header{
+    .home-link-header {
         display: flex;
+        align-items: center;
     }
     .logo-header {
         justify-self: center;
+        width: 100px;
         margin: 0;
     }
     .login-link-header {
@@ -46,5 +49,4 @@
         opacity: 0.7;
         text-decoration: none;
     }
-    
 }
