--- a/frontend/src/assets/styles/cmps/_addUsers.scss
+++ b/frontend/src/assets/styles/cmps/_addUsers.scss
@@ -2,20 +2,20 @@
     z-index: 50;
     position: absolute;
     display: flex;
-    left: 180px;
-    width: 270px;
+    left:rem(180px);
+    width: rem(270px);
     flex-direction: column;
     background-color: #fff;
-    border-radius: 3px;
-    padding: 10px;
-    box-shadow: 0 8px 16px -4px rgba(9, 30, 66, 0.25), 0 0 0 1px rgba(9, 30, 66, 0.08);
+    border-radius: rem(3px);
+    padding: rem(10px);
+    box-shadow: 0 rem(8px) rem(16px) rem(-4px) rgba(9, 30, 66, 0.25), 0 0 0 rem(1px) rgba(9, 30, 66, 0.08);
     text-decoration: none;
     .edit-users-header {
         display: flex;
         justify-content: space-between;
-        border-bottom: 0.2px solid rgba(94, 108, 132, 0.25);
+        border-bottom: rem(0.2px) solid rgba(94, 108, 132, 0.25);
         align-items:center ;
-        padding-block: 10px;
+        padding-block: rem(10px);
         .title {
             color: #243757;
             font-size: 1.2rem;
@@ -32,19 +32,19 @@
             color: #233655;
             background-color: transparent;
             border: none;
-            width: 24px;
-            height: 24px;
+            width: rem(24px);
+            height: rem(24px);
             cursor: pointer;
             outline: none;
             font-size: 1.5rem;
         }
     }
     .users-preview {
-        border-bottom: 0.2px solid rgba(94, 108, 132, 0.25);
+        border-bottom: rem(0.2px) solid rgba(94, 108, 132, 0.25);
         display: grid;
-        grid-template-columns: 50px auto auto;
+        grid-template-columns: rem(50px) auto auto;
         align-self: center;
-        padding-block: 10px;
+        padding-block: rem(10px);
         width: 100%;
         &:hover {
             background-color: #ebecf0;
@@ -52,11 +52,11 @@
         .avatar {
             align-self: center;
             justify-items: end;
-            width: 28px;
-            height: 28px;
+            width: rem(28px);
+            height: rem(28px);
             border-radius: 50%;
-            line-height: 28px;
-            margin: 1px;
+            line-height: rem(28px);
+            margin: rem(1px);
             font-size: 0.8rem;
         }
         .users-name {
