--- a/frontend/src/assets/styles/cmps/_dates.scss
+++ b/frontend/src/assets/styles/cmps/_dates.scss
@@ -3,27 +3,27 @@
     background-color: #ffffff;
     flex-wrap: wrap;
     position: absolute;
-    border-radius: 5px;
-    padding: 5px;
-    border: 0.5px solid black;
+    border-radius: rem(5px);
+    padding: rem(5px);
+    border: rem(0.5px) solid black;
     flex-direction: column;
     input {
         background-color: white;
-        padding-bottom: 15px;
+        padding-bottom: rem(15px);
         font: revert;
     }
     .dates {
-        width: 179px;
-        height: 120px;
-        margin-right: 5px;
-        margin-left: 5px;
+        width: rem(179px);
+        height: rem(120px);
+        margin-right: rem(5px);
+        margin-left: rem(5px);
     }
     .cancel-change-date-btn {
-        width: 70px;
-        height: 15px;
+        width: rem(70px);
+        height: rem(15px);
         align-self: center;
         background-color: white;
         color: #243757;
-        margin-bottom: 20px;
+        margin-bottom: rem(20px);
     }
 }
