--- a/frontend/src/assets/styles/cmps/_labelEdit.scss
+++ b/frontend/src/assets/styles/cmps/_labelEdit.scss
@@ -2,20 +2,20 @@
     z-index: 2;
     position: absolute;
     display: flex;
-    left: 120px;
-    width: 270px;
+    left: rem(120px);
+    width: rem(270px);
     flex-direction: column;
     background-color: #fff;
-    border-radius: 3px;
-    padding: 10px;
-    box-shadow: 0 8px 16px -4px rgba(9, 30, 66, 0.25), 0 0 0 1px rgba(9, 30, 66, 0.08);
+    border-radius: rem(3px);
+    padding: rem(10px);
+    box-shadow: 0 rem(8px) rem(16px) rem(-4px) rgba(9, 30, 66, 0.25), 0 0 0 rem(1px) rgba(9, 30, 66, 0.08);
     text-decoration: none;
     .edit-labels-header {
         width: 100%;
         display: flex;
-        border-bottom: 0.2px solid rgba(94, 108, 132, 0.25);
+        border-bottom: rem(0.2px) solid rgba(94, 108, 132, 0.25);
         justify-content: space-around;
-        padding-block: 5px;
+        padding-block: rem(5px);
         align-items: center;
         .title {
             line-height: 0.9;
@@ -31,8 +31,8 @@
             color: #233655;
             background-color: transparent;
             border: none;
-            height: 32px;
-            width: 32px;
+            height: rem(32px);
+            width: rem(32px);
             cursor: pointer;
             outline: none;
         }
@@ -40,20 +40,20 @@
     .label-preview {
         display: flex;
         &:first-child {
-            margin-top: 5px;
+            margin-top: rem(5px);
         }
         .label-title {
             color: #fff6f6;
-            margin: 0px 5px 5px 5px;
-            width: 244px;
-            height: 32px;
-            padding: 6px 12px;
-            min-height: 20px;
-            border-radius: 3px;
+            margin: 0px rem(5px) rem(5px) rem(5px);
+            width: rem(244px);
+            height: rem(32px);
+            padding: rem(6px) rem(12px);
+            min-height: rem(20px);
+            border-radius: rem(3px);
             align-content: center;
             cursor: pointer;
             display: grid;
-            grid-template-columns:auto 50px;
+            grid-template-columns:auto rem(50px);
             svg {
                 align-self: center;
                 justify-self: flex-end;
@@ -64,12 +64,12 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            margin: 0 0 4px;
-            width: 32px;
-            height: 32px;
+            margin: 0 0 rem(4px);
+            width: rem(32px);
+            height:rem(32px);
             background-color: transparent;
-            padding: 6px;
-            border-radius: 3px;
+            padding: rem(6px);
+            border-radius: rem(3px);
             cursor: pointer;
             border: none;
             &:hover {
@@ -82,7 +82,7 @@
         color: #233655;
         background-color: transparent;
         border: none;
-        padding: 8px;
+        padding: rem(8px);
         font-size: 1.1rem;
         cursor: pointer;
         outline: none;
@@ -96,21 +96,21 @@
     z-index: 2;
     position: absolute;
     display: flex;
-    left: 120px;
-    width: 300px;
+    left: rem(120px);
+    width: rem(300px);
     flex-direction: column;
     background-color: #fff;
     color: #243757;
-    border-radius: 3px;
-    padding: 10px;
-    box-shadow: 0 8px 16px -4px rgba(9, 30, 66, 0.25), 0 0 0 1px rgba(9, 30, 66, 0.08);
+    border-radius: rem(3px);
+    padding: rem(10px);
+    box-shadow: 0 rem(8px) rem(16px) rem(-4px) rgba(9, 30, 66, 0.25), 0 0 0 rem(1px) rgba(9, 30, 66, 0.08);
     text-decoration: none;
     .edit-label-header {
         width: 100%;
         display: flex;
-        border-bottom: 0.2px solid rgba(94, 108, 132, 0.25);
+        border-bottom: rem(0.2px) solid rgba(94, 108, 132, 0.25);
         justify-content: space-around;
-        padding-block: 5px;
+        padding-block: rem(5px);
         align-items: center;
         .title {
             line-height: 0.9;
@@ -126,29 +126,29 @@
             color: #233655;
             background-color: transparent;
             border: none;
-            height: 32px;
-            width: 32px;
+            height: rem(32px);
+            width: rem(32px);
             cursor: pointer;
             outline: none;
         }
     }
     .edit-label-form {
-        margin-left: 4px;
+        margin-left: rem(4px);
         .edit-label-colors-pick {
             display: flex;
             flex-wrap: wrap;
             width: 100%;
             .color {
-                margin: 0px 8px 8px 0px;
-                width: 48px;
-                height: 32px;
-                border-radius: 3px;
+                margin: 0px rem(8px) rem(8px) 0px;
+                width: rem(48px);
+                height: rem(32px);
+                border-radius: rem(3px);
                 cursor: pointer;
                 &:hover {
                     opacity: 0.5;
                 }
                 &:nth-child(5n+5) {
-                    margin-right: 4px;
+                    margin-right: rem(4px);
                 }
             }
         }
@@ -158,10 +158,10 @@
             width: 100%;
             margin: 0;
             > * {
-                border-radius: 3px;
+                border-radius: rem(3px);
                 color: #fff;
-                height: 32px;
-                padding: 6px;
+                height: rem(32px);
+                padding: rem(6px);
                 &:hover {
                     opacity: 0.5;
                 }
@@ -170,8 +170,8 @@
                 background-color: #5aac44;
             }
             .delete-btn {
-                margin-right: 4px;
-                background-color: red;
+                margin-right: rem(4px);
+                background-color: #eb5a46;
             }
         }
     }
