--- a/frontend/src/assets/styles/cmps/_taskPreview.scss
+++ b/frontend/src/assets/styles/cmps/_taskPreview.scss
@@ -3,10 +3,10 @@
     display: flex;
     flex-direction: column;
     background-color: white;
-    box-shadow: 0 1px 0 #091e4240;
-    border-radius: 3px;
-    margin-bottom: 6px;
-    min-height: 32px;
+    box-shadow: 0 rem(1px) 0 #091e4240;
+    border-radius: rem(3px);
+    margin-bottom: rem(6px);
+    min-height: rem(32px);
     cursor: pointer;
     justify-content: center;
     .task-cover {
@@ -14,54 +14,54 @@
             margin: 0 auto;
             object-fit: cover;
             width: 100%;
-            border-radius: 3px;
-            margin-bottom: 3px;
+            border-radius: rem(3px);
+            margin-bottom: rem(3px);
             background-repeat: no-repeat;
             background-size: cover;
             background-position: center center;
-            margin-bottom: -4px;
+            margin-bottom: rem(-4px);
         }
         .bgc-cover {
-            height: 32px;
+            height: rem(32px);
             width: 100%;
-            border-radius: 3px;
-            margin-bottom: 3px;
+            border-radius: rem(3px);
+            margin-bottom: rem(3px);
         }
     }
     .label-list {
         display: flex;
         flex-wrap: wrap;
-        margin: 3px 0px 3px 6px;
+        margin: rem(3px) 0px rem(3px) rem(6px);
         transition: 0.5s;
         > *:not(:first-child) {
-            margin-left: 3px;
+            margin-left: rem(3px);
         }
         .label {
             transition: 0.5s;
-            min-width: 50px;
-            min-height: 10px;
+            min-width: rem(50px);
+            min-height: rem(10px);
             display: flex;
             justify-content: center;
             align-items: center;
             font-size: 0.8rem;
-            border-radius: 5px;
+            border-radius: rem(5px);
             color: white;
             font-weight: 600;
-            padding-inline: 5px;
+            padding-inline: rem(5px);
             &:nth-child(n + 5) {
-                margin-top: 3px;
+                margin-top: rem(3px);
             }
             &:nth-child(5) {
                 margin-left: 0px;
             }
         }
         .label.open {
-            min-height: 20.5px;
+            min-height: rem(20.5px);
         }
     }
     a {
         text-decoration: none;
-        margin: 0 6px 4px;
+        margin: 0 rem(6px) rem(4px);
         h5 {
             font-weight: 400;
             color: #00395aec;
@@ -71,27 +71,27 @@
         .badges {
             display: grid;
             align-items: center;
-            margin-top: 3px;
+            margin-top: rem(6px);
             margin-bottom: 0px;
-            grid-template-columns: 60px auto auto;
+            grid-template-columns: rem(60px) auto auto;
             grid-template-rows: max-content;
             > * {
                 color: #6d798e;
-                font-size: 12px;
+                font-size: rem(12px);
                 height: fit-content;
             }
             .dew-date {
                 background-color: #eb5a46;
                 color: white;
-                border-radius: 3px;
-                padding: 1px 2px;
-                width: 60px;
+                border-radius: rem(3px);
+                padding: rem(1px) rem(2px);
+                width: rem(60px);
                 display: flex;
                 justify-content: center;
                 align-items: center;
                 .clock {
-                    width: 15px;
-                    margin-right: 2px;
+                    width: rem(15px);
+                    margin-right: rem(2px);
                     align-self: baseline;
                 }
             }
@@ -99,10 +99,10 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
-                border-radius: 3px;
-                padding: 1px 2px;
+                border-radius: rem(3px);
+                padding: rem(1px) rem(2px);
                 svg {
-                    width: 15px;
+                    width: rem(15px);
                     align-self: baseline;
                 }
             }
@@ -113,11 +113,11 @@
                 grid-column: 3/4;
                 .avatar {
                     justify-items: end;
-                    width: 28px;
-                    height: 28px;
+                    width: rem(28px);
+                    height: rem(28px);
                     border-radius: 50%;
-                    line-height: 28px;
-                    margin: 1px;
+                    line-height: rem(28px);
+                    margin: rem(1px);
                 }
             }
         }
@@ -126,12 +126,12 @@
         display: flex;
         align-items: center;
         font-weight: 900;
-        border-radius: 3px;
+        border-radius: rem(3px);
         display: none;
         position: absolute;
         background-color: rgba(255, 255, 255, 0.671);
         text-align: center;
-        padding: 3px;
+        padding: rem(3px);
         top: 0;
         right: 0;
         .task-options-svg {
