--- a/frontend/src/assets/styles/cmps/_bgPickList.scss
+++ b/frontend/src/assets/styles/cmps/_bgPickList.scss
@@ -1,15 +1,15 @@
 .picks {
     display: grid;
-    margin-top: 25px;
-    grid-template-columns: repeat(2, 115px);
-    gap: 25px 25px;
+    margin-top: rem(25px);
+    grid-template-columns: repeat(2, rem(115px));
+    gap:  rem(25px) rem(25px);
     height: 100%;
     .pick {
         align-self: center;
         width: 100%;
         height: 100%;
         object-fit: cover;
-        border-radius: 10px;
+        border-radius: rem(10px);
         opacity: 1;
         cursor: pointer;
         background-color: rgb(0, 0, 0);  
