--- a/frontend/src/assets/styles/cmps/_boardHeader.scss
+++ b/frontend/src/assets/styles/cmps/_boardHeader.scss
@@ -2,21 +2,21 @@
     display: flex;
     position: fixed;
     justify-content: space-between;
-    padding: 0 5px;
-    min-height: 49px;
+    padding: 0 rem(5px);
+    min-height: rem(49px);
     align-items: center;
     color: #243757;
     cursor: pointer;
     font-weight: 700;
     font-size: 1.25rem;
-    height: 32px;
+    height: rem(32px);
     background-color: rgba(0, 0, 0, 0);
-    margin-top: 10px;
+    margin-top: rem(10px);
     width: 100%;
     z-index: 1;
 
     .header-options {
-        margin-top: 10px;
+        margin-top: rem(10px);
         display: grid;
         width: 100%;
         align-items: center;
@@ -24,8 +24,8 @@
  
         .header-title {
             background-color: rgba(255, 255, 255, 0.39);
-            border-radius: 5px;
-            padding: 0px 10px;
+            border-radius: rem(5px);
+            padding: rem(0px) rem(10px);
             width: 100%;
             &:hover{
                 opacity: 0.8;
@@ -35,25 +35,25 @@
             display: flex;
             align-items: center;
             background-color: rgba(255, 255, 255, 0.39);
-            border-radius: 5px;
-            padding: 0px 10px;
+            border-radius: rem(5px);
+            padding: rem(0px) rem(10px);
             svg{
-                margin-right: 3px;
+                margin-right: rem(3px);
             }
             &:hover{
                 opacity: 0.8;
             }
         }
         .board-title-input {
-            width: 150px;
+            width: rem(150px);
             outline: none;
             border: none;
-            border-radius: 3px;
+            border-radius: rem(3px);
             background-color: #fff;
             color: #00395aec;
-            box-shadow: inset 0 0 0 2px #0079bf;
+            box-shadow: inset 0 0 0 rem(2px) #0079bf;
             margin: 0;
-            padding: 8px 12px;
+            padding: rem(8px) rem(12px);
         }
         .board-title-input::placeholder {
             opacity: 1;
@@ -61,29 +61,29 @@
         }
 
         > *:not(:first-child) {
-            margin-left: 40px;
+            margin-left: rem(40px);
         }
         .header-avatars {
             display: flex;
-            height: 32px;
+            height: rem(32px);
             width: max-content;
             align-items: center;
-            margin-left: 20px;
+            margin-left: rem(20px);
             > * {
-                height: 25px;
-                width: 25px;
-                border: 0.5px solid rgba(0, 0, 0, 0.37);
+                height: rem(25px);
+                width: rem(25px);
+                border: rem(0.5px) solid rgba(0, 0, 0, 0.37);
             }
             > *:not(:first-child) {
-                margin-left: -7px;
+                margin-left: rem(-7px);
             }
             .add-member-avatar {
-                margin-left: -5px;
+                margin-left: rem(-5px);
                 background-color: #0079bf;
                 display: flex;
                 svg {
-                    height: 20px;
-                    padding-right: 1.5px;
+                    height: rem(20px);
+                    padding-right: rem(1.5px);
                 }
                 &:hover {
                     opacity: 0.8;
@@ -94,11 +94,11 @@
             display: flex;
             background-color: rgba(255, 255, 255, 0.39);
             color: #243757;
-            border-radius: 5px;
+            border-radius: rem(5px);
             justify-self: flex-end;
             align-items: center;
             .path {
-                height: 100px;
+                height: rem(100px);
             }
             &:hover{
                 opacity: 0.8;
