--- a/frontend/src/assets/styles/cmps/_checklist.scss
+++ b/frontend/src/assets/styles/cmps/_checklist.scss
@@ -1,5 +1,5 @@
         .checklists {
-            margin: 20px 0 20px 0;
+            margin: rem(20px) 0 rem(20px) 0;
             .container {
                 width: 96%;
                 justify-content: space-between;
@@ -9,11 +9,11 @@
                 }
             }
             .todos {
-                margin-left: 5px;
+                margin-left: rem(5px);
                 p {
-                    margin: 10px 0 5px 0;
-                    font-size: 14px;
-                    line-height: 20px;
+                    margin: rem(10px) 0 rem(5px) 0;
+                    font-size: rem(14px);
+                    line-height: rem(20px);
                     font-weight: 400;
                 }
             }
@@ -22,20 +22,20 @@
                     margin: 0;
                 }
                 .icon {
-                    margin-right: 5px;
+                    margin-right: rem(5px);
                 }
             }
             .checkbox {
-                width: 20px;
-                margin-right: 5px;
+                width: rem(20px);
+                margin-right: rem(5px);
                 svg {
-                    height: 20px;
-                    width: 20px;
+                    height: rem(20px);
+                    width: rem(20px);
                     color: #0079bf;
                 }
             }
             .todo {
-                margin-left: 2px;
+                margin-left: rem(2px);
                 &:hover {
                     // background-color: rgba(9, 30, 66, .04);
                     // &>* {
@@ -46,8 +46,8 @@
                     }
                 }
                 .title-input {
-                    font-size: 14px;
-                    line-height: 20px;
+                    font-size: rem(14px);
+                    line-height: rem(20px);
                     font-weight: 400;
                     margin: 0;
                     text-decoration: line-through;
@@ -55,15 +55,15 @@
             }
             button {
                 color: #172b4d;
-                font-size: 14px;
-                line-height: 20px;
+                font-size: rem(14px);
+                line-height: rem(20px);
                 font-weight: 400;
                 align-items: center;
                 justify-content: center;
-                border-radius: 3px;
+                border-radius: rem(3px);
                 cursor: pointer;
-                padding: 6px 12px;
-                margin: 5px 0 20px 30px;
+                padding: rem(6px) rem(12px);
+                margin: rem(5px) 0 rem(20px) rem(30px);
                 background-color: rgba(9, 30, 66, .04);
             }
         }
