--- a/frontend/src/assets/styles/cmps/_group.scss
+++ b/frontend/src/assets/styles/cmps/_group.scss
@@ -1,17 +1,17 @@
 .group:first-of-type{
-    margin-left: 6px;
+    margin-left: rem(6px);
 }
 .group {
     display: flex;
     position: relative;
     flex-direction: column;
-    margin-inline: 3px;
+    margin-inline: rem(3px);
     background-color: #ebecf0;
-    border-radius: 5px;
+    border-radius: rem(5px);
     max-height: 100vh;
     width: fit-content;
     .header {
-        padding-block: 6px;
+        padding-block: rem(6px);
         width: 100%;
         height: fit-content;
         display: grid;
@@ -20,7 +20,7 @@
 
         .title {
             color: #243757;
-            padding-left: 6px;
+            padding-left: rem(6px);
             font-weight: 600;
             font-size: 1rem;
             margin: 0;
@@ -35,13 +35,13 @@
             color: #6d798e;
             padding: 0px;
             margin: 0px;
-            border-radius: 3px;
-            margin-right: 6px;
+            border-radius: rem(3px);
+            margin-right: rem(6px);
             height: fit-content;
             .group-options-svg{
-                margin-inline: 5px;
+                margin-inline: rem(5px);
                 display: flex;
-                height: 32px;
+                height: rem(32px);
             }
         }
         .options:hover {
@@ -49,18 +49,18 @@
             color: #243757;
         }
         form {
-            padding: 6px 6px;
-            margin:0px;
+            padding: rem(6px) rem(6px);
+            margin:rem(0px);
             input {
                 outline: none;
                 border: none;
-                border-radius: 3px;
+                border-radius: rem(3px);
                 background-color: #fff;
                 color: #00395aec;
-                box-shadow: inset 0 0 0 2px #0079bf;
+                box-shadow: inset 0 0 0 rem(2px) #0079bf;
                 margin: 0;
                 width: 100%;
-                padding: 4px 3px;
+                padding: rem(4px) rem(3px);
 
                 &::placeholder {
                     opacity: 1;
@@ -70,52 +70,52 @@
         }
     }
     .task-list {
-        width: 265px;
-        padding-inline: 3px;
+        width: rem(265px);
+        padding-inline:rem(3px);
         padding-bottom: 0;
-        max-height: 65vh;
+        max-height: 70vh;
         overflow-y: auto;
         overflow-x: hidden;
-        margin-inline: 3px;
+        margin-inline: rem(3px);
         &::-webkit-scrollbar {
-            width:6px;
+            width:rem(6px);
         }
         &::-webkit-scrollbar-thumb {
-            border-radius: 3px;
-            box-shadow: inset 0 0 6px #00000046;
+            border-radius: rem(3px);
+            box-shadow: inset 0 0 rem(6px) #00000046;
         }
         &::-webkit-scrollbar-track {
-            border-radius: 3px;
+            border-radius: rem(3px);
             background: rgba(9, 30, 66, 0.041);
         }
         &::-webkit-scrollbar-track-piece {
-            border-radius: 3px;
+            border-radius: rem(3px);
             background: rgba(190, 194, 205, 0.548);
         }
         .add-task-form {
             padding-top: 0;
-            padding-bottom: 6px;
+            padding-bottom: rem(6px);
             .task-title-input {
                 font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Droid Sans, Helvetica Neue,
                 sans-serif;
                 outline: none;
                 border: none;
                 color: #00395aec;
-                box-shadow: 0 1px 0 #091e4240;
-                border-radius: 3px;
+                box-shadow: 0 rem(1px) 0 #091e4240;
+                border-radius: rem(3px);
                 width: 100%;
                 margin: 0;
-                padding: 8px 12px;
+                padding: rem(8px) rem(12px);
                 resize: none;
             }
             .add-task-controls {
-                height: 32px;
-                margin: 8px 0px 0px 0px;
+                height: rem(32px);
+                margin: rem(8px) 0px 0px 0px;
                 display: flex;
                 .add-task-close-btn {
                     padding: 0;
                     margin: 0;
-                    width: 32px;
+                    width: rem(32px);
                     font-size: 1.1rem;
                     color: #42526ec5;
                 }
@@ -125,9 +125,9 @@
                 .add-task-add-btn {
                     background-color: #0079bf;
                     color: white;
-                    height: 32px;
+                    height: rem(32px);
                     margin: 0px;
-                    border-radius: 3px;
+                    border-radius: rem(3px);
                 }
                 .add-task-add-btn:hover {
                     background-color: #0069a7;
@@ -138,10 +138,10 @@
     .add-task-toggle-btn {
         background-color: #ebecf0;
         color: #6d798e;
-        padding: 6px 9px;
-        margin: 0px 6px 6px;
-        border-radius: 3px;
-        height: 35px;
+        padding: rem(6px) rem(9px);
+        margin: 0px rem(6px) rem(6px);
+        border-radius: rem(3px);
+        height: rem(35px);
         text-align: left;
     }
     .add-task-toggle-btn:hover {
