--- a/frontend/src/assets/styles/cmps/_header.scss
+++ b/frontend/src/assets/styles/cmps/_header.scss
@@ -3,18 +3,18 @@
     background-color: #000000ad;
     display: grid;
     grid-template-columns: max-content max-content auto max-content;
-    padding: 5px 5px;
+    padding: rem(5px) rem(5px);
     width: 100%;
     position: fixed;
     opacity: 0.75;
     align-items: center;
 
     > * {
-        height: 32px;
-        margin-left: 10px;
+        height:rem(32px) ;
+        margin-left: rem(10px);
         background-color: rgba(255, 255, 255, 0.151);
-        border-radius: 3px;
-        padding: 2px 10px;
+        border-radius: rem(3px);
+        padding: rem(2px) rem(10px);
     }
     .home-link-header {
         display: flex;
@@ -22,22 +22,22 @@
     }
     .logo-header {
         justify-self: center;
-        width: 100px;
+        width: rem(100px);
         margin: 0;
     }
     .login-link-header {
         justify-self: end;
         display: flex;
-        padding: 0px 5px 0px 5px;
-        margin: 0px 5px 0px 0px;
+        padding: rem(0px) rem(5px) rem(0px) rem(5px);
+        margin: rem(0px) rem(5px) rem(0px) rem(0px);
         align-items: center;
         .logged-in-user-avatar {
-            height: 25px;
-            width: 25px;
+            height: rem(25px);
+            width: rem(25px);
             font-size: 0.9rem;
-            margin-right: 7px;
+            margin-right: rem(7px);
             position: relative;
-            top: 1.5px;
+            top: rem(1.5px);
         }
     }
 
@@ -49,4 +49,5 @@
         opacity: 0.7;
         text-decoration: none;
     }
+
 }
