--- a/frontend/src/assets/styles/cmps/_sideBar.scss
+++ b/frontend/src/assets/styles/cmps/_sideBar.scss
@@ -8,9 +8,9 @@
     z-index: 98;
 }
 .side-bar {
-    padding: 0px 25px 25px 25px;
+    padding: 0px rem(25px) rem(25px) rem(25px);
     background-color: #f4f5f7;
-    width: 305px;
+    width: rem(305px);
     display: flex;
     flex-direction: column;
     position: fixed;
@@ -24,9 +24,9 @@
     .side-bar-header {
         width: 100%;
         display: flex;
-        border-bottom: 0.2px solid rgba(94, 108, 132, 0.25);
+        border-bottom: rem(0.2px) solid rgba(94, 108, 132, 0.25);
         justify-content: space-around;
-        padding-block: 10px;
+        padding-block: rem(10px);
         align-items: baseline;
         .title {
             line-height: 0.9;
@@ -61,18 +61,18 @@
     .side-bar-main {
         width: 100%;
         .change-bg-btn-container {
-            border-bottom: 0.2px solid rgba(94, 108, 132, 0.25);
+            border-bottom: rem(0.2px) solid rgba(94, 108, 132, 0.25);
             display: flex;
-            margin-bottom: 10px;
+            margin-bottom: rem(10px);
             width: 100%;
             .change-bg-btn {
-                border-radius: 3px;
+                border-radius: rem(3px);
                 border: none;
                 outline: none;
                 color: #172b4d;
-                height: 30px;
-                margin: 8px 0;
-                padding: 2px 10px;
+                height: rem(30px);
+                margin: rem(8px) 0;
+                padding: rem(2px) rem(10px);
                 -webkit-user-select: none;
                 -ms-user-select: none;
                 user-select: none;
@@ -93,30 +93,30 @@
             color: #172b4d;
             overflow-y: auto;
             height: 76vh;
-            margin-bottom: 50px;
+            margin-bottom: rem(50px);
             &::-webkit-scrollbar {
-                width:6px;
+                width:rem(6px);
             }
             &::-webkit-scrollbar-thumb {
-                border-radius: 3px;
-                box-shadow: inset 0 0 6px #00000046;
+                border-radius: rem(3px);
+                box-shadow: inset 0 0 rem(6px) #00000046;
             }
             &::-webkit-scrollbar-track {
-                border-radius: 3px;
+                border-radius: rem(3px);
                 background: rgba(9, 30, 66, 0.041);
             }
             &::-webkit-scrollbar-track-piece {
-                border-radius: 3px;
+                border-radius: rem(3px);
                 background: rgba(190, 194, 205, 0.548);
             }
             .activity-preview {
                 display: flex;
                 .avatar {
-                    height: 28px;
-                    width: 28px;
-                    margin: 0 20px 0 0;
+                    height: rem(28px);
+                    width: rem(28px);
+                    margin: 0 rem(20px) 0 0;
                     color: #fff;
-                    font-size: 16px;
+                    font-size: rem(16px);
                     font-weight: 500;
                     background-color: #3f72af;
                 }
@@ -127,7 +127,7 @@
                     display: flex;
                     flex-direction: column;
                     position: relative;
-                    bottom: 3px;
+                    bottom: rem(3px);
 
                     .at {
                         font-size: rem(12px);
@@ -143,18 +143,18 @@
         justify-content: space-around;
 
         .photos-option {
-            margin-top: 10px;
+            margin-top: rem(10px);
             display: flex;
             flex-direction: column;
             align-items: center;
             .photos-btn {
                 background-color: #dfe1e6;
                 background-size: cover;
-                border-radius: 8px;
-                height: 80px;
-                margin-bottom: 8px;
-                width: 130px;
-                margin-right: 10px;
+                border-radius: rem(8px);
+                height: rem(80px);
+                margin-bottom: rem(8px);
+                width: rem(130px);
+                margin-right: rem(10px);
                 cursor: pointer;
                 background-image: url(../../imgs/photosPreview.jpg);
             }
@@ -164,17 +164,17 @@
             }
         }
         .colors-option {
-            margin-top: 10px;
+            margin-top: rem(10px);
             display: flex;
             flex-direction: column;
             align-items: center;
             .colors-btn {
                 background-color: #dfe1e6;
                 background-size: cover;
-                border-radius: 8px;
-                height: 80px;
-                margin-bottom: 8px;
-                width: 130px;
+                border-radius: rem(8px);
+                height: remm(80px);
+                margin-bottom: rem(8px);
+                width: rem(130px);
                 cursor: pointer;
                 background-image: url(../../imgs/colorsPreview.png);
             }
