--- a/frontend/src/assets/styles/cmps/_taskOptions.scss
+++ b/frontend/src/assets/styles/cmps/_taskOptions.scss
@@ -10,16 +10,16 @@
 
 .task-options-container {
     position: fixed;
-    left: 100px;
-    top: 100px;
+    left: rem(100px);
+    top: rem(100px);
     z-index: 100;
     display: flex;
-    padding: 20px;
-    border-radius: 5px;
+    padding: rem(20px);
+    border-radius: rem(5px);
     button {
         padding: 0;
         margin: 0;
-        border-radius: 5px;
+        border-radius: rem(5px);
     }
     .change-task-title {
         display: flex;
@@ -28,17 +28,17 @@
         .new-title-input {
             font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Droid Sans, Helvetica Neue,
             sans-serif;
-            padding: 20px;
+            padding: rem(20px);
             outline: none;
-            border-radius: 5px;
-            border: 0.5px solid;
-            width: 200px;
-            height: 166px;
+            border-radius: rem(5px);
+            border: rem(0.5px) solid;
+            width: rem(200px);
+            height: rem(166px);
         }
         button {
-            margin-top: 10px;
-            width: 60px;
-            height: 30px;
+            margin-top: rem(10px);
+            width: rem(60px);
+            height: rem(30px);
             color: white;
             background-color: #0079bf;
         }
@@ -51,27 +51,27 @@
         display: flex;
         flex-direction: column;
         .options-btn {
-            margin: 0 0 15px 5px;
-            padding: 6px 12px 6px 8px;
+            margin: 0 0 rem(15px) rem(5px);
+            padding: rem(6px) rem(12px) rem(6px) rem(8px);
             position: relative;
             color: white;
             background-color: #2f2f2fbe;
-            width: 150px;
-            height: 30px;
+            width: rem(150px);
+            height: rem(30px);
             font-size: 0.8rem;
             display: grid;
-            grid-template-columns: 20px auto;
+            grid-template-columns: rem(20px) auto;
             align-items: center;
             justify-content: start;
             .svg {
                 font-size: 0.8rem;
-                margin-right: 10px;
+                margin-right: rem(10px);
             }
  
         }
         .options-btn:hover {
             background-color: #000000;
-            left: 10px;
+            left: rem(10px);
         }
     }
 }
