--- a/frontend/src/assets/styles/pages/_BoardCharts.scss
+++ b/frontend/src/assets/styles/pages/_BoardCharts.scss
@@ -3,7 +3,7 @@
     position: fixed;
     z-index: 1000;
     left: 0;
-    top: 94px;
+    top: rem(94px);
     height: 80%;
     width: 100%;
     padding-inline: 100;
@@ -13,7 +13,7 @@
     grid-template-rows: 5% 80%;
     color: white;
     .header-title {
-        letter-spacing: 1.5px;
+        letter-spacing: rem(1.5px);
         grid-row: 1/2;
         grid-column: 1/3;
         text-align: center;
@@ -30,14 +30,14 @@
         color: white;
         height: 100%;
         .title {
-            margin-bottom: 30px;
+            margin-bottom: rem(30px);
             text-align: center;
             width: 100%;
             justify-self: start;
             font-size: 1.1rem;
         }
         .chart {
-            height: 200px;
+            height: rem(200px);
         }
     }
 }
