--- a/frontend/src/assets/styles/pages/_BoardDetails.scss
+++ b/frontend/src/assets/styles/pages/_BoardDetails.scss
@@ -2,15 +2,15 @@
     z-index: 1;
     display: flex;
     width: fit-content;
-    margin-top: 68px;
+    margin-top: rem(68px);
     .add-group-toggle-btn {
         margin: 0;
         z-index: 0;
-        min-width: 265px;
+        min-width: rem(265px);
         color: white;
         background-color: rgba(0, 0, 0, 0.226);
-        border-radius: 5px;
-        height: 37px;
+        border-radius: rem(5px);
+        height: rem(37px);
     }
     .add-group-toggle-btn:hover {
         background-color: rgba(0, 0, 0, 0.658);
@@ -19,32 +19,32 @@
         z-index: 5;
         background-color: #ebecf0;
         height: fit-content;
-        border-radius: 5px;
-        padding: 3px;
-        width: 265px;
+        border-radius: rem(5px);
+        padding: rem(3px);
+        width: rem(265px);
         .group-title-input {
             outline: none;
             border: none;
-            border-radius: 3px;
+            border-radius: rem(3px);
             background-color: #fff;
             color: #00395aec;
-            box-shadow: inset 0 0 0 2px #0079bf;
+            box-shadow: inset 0 0 0 rem(2px) #0079bf;
             margin: 0;
             width: 100%;
-            padding: 8px 12px;
+            padding: rem(8px) rem(12px);
         }
         .group-title-input::placeholder {
             opacity: 1;
             color: #00395aec;
         }
         .add-group-controls {
-            height: 32px;
-            margin: 4px 0px 0px 0px;
+            height: rem(32px);
+            margin: rem(4px) 0px 0px 0px;
             display: flex;
             .add-group-close-btn {
                 padding: 0;
                 margin: 0;
-                width: 32px;
+                width: rem(32px);
                 font-size: 1.1rem;
                 color: #42526ec5;
             }
@@ -54,9 +54,9 @@
             .add-group-add-btn {
                 background-color: #0079bf;
                 color: white;
-                height: 32px;
+                height: rem(32px);
                 margin: 0px;
-                border-radius: 3px;
+                border-radius: rem(3px);
             }
             .add-group-add-btn:hover {
                 background-color: #0069a7;
@@ -65,7 +65,7 @@
     }
 }
 .board-window {
-    box-shadow: inset 0 0 0 2000px rgba(255, 255, 255, 0.109);
+    box-shadow: inset 0 0 0 rem(2000px) rgba(255, 255, 255, 0.109);
     background-repeat: no-repeat;
     background-size: cover;
     height: 100%;
