--- a/frontend/src/assets/styles/pages/_LoginSignup.scss
+++ b/frontend/src/assets/styles/pages/_LoginSignup.scss
@@ -1,18 +1,18 @@
 .form-container {
     background-color: rgb(173, 181, 197);
     height: 50vh;
-    margin-top: 100px;
+    margin-top: rem(100px);
     color: #243757;
     display: flex;
     flex-direction: column;
     align-items: center;
     .frm {
         .title {
-            width: 350px;
+            width: rem(350px);
             text-align: center;
-            border-bottom: 0.5px solid #243757;
-            padding-bottom: 10px;
-            margin-bottom: 30px;
+            border-bottom: rem(0.5px) solid #243757;
+            padding-bottom: rem(10px);
+            margin-bottom: rem(30px);
         }
         .cradentials {
             width: 100%;
@@ -22,15 +22,15 @@
             align-items: center;
 
             input {
-                width: 200px;
+                width: rem(200px);
                 outline: none;
                 border: none;
-                border-radius: 3px;
+                border-radius: rem(3px);
                 background-color: #fff;
                 color: #00395aec;
-                box-shadow: inset 0 0 0 2px #0079bf;
-                padding: 5px 10px;
-                margin-bottom: 10px;
+                box-shadow: inset 0 0 0 rem(2px) #0079bf;
+                padding: rem(5px) rem(10px);
+                margin-bottom: rem(10px);
             }
             input::placeholder {
                 color: #243757;
@@ -38,17 +38,17 @@
                     Helvetica Neue, sans-serif;
             }
             .login-signup-btn  {
-                width: 100px;
+                width: rem(100px);
                 font-size: 0.9rem;
                 align-self: center;
                 font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Droid Sans,
                     Helvetica Neue, sans-serif;
-                border-radius: 3px;
+                border-radius: rem(3px);
                 background-color: white;
                 color: #00395aec;
                 transition: 0.3s;
-                padding: 3px 6px;
-                margin-block: 10px;
+                padding: rem(3px) rem(6px);
+                margin-block: rem(10px);
                 &:hover {
                     color: white;
                     background-color: #243757;
@@ -68,17 +68,17 @@
         display: flex;
         flex-direction: column;
         .login-signup-btn {
-            width: 100px;
+            width: rem(100px);
             font-size: 0.9rem;
             align-self: center;
             font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Droid Sans,
                 Helvetica Neue, sans-serif;
-            border-radius: 3px;
+            border-radius: rem(3px);
             background-color: white;
             color: #00395aec;
             transition: 0.3s;
-            padding: 3px 6px;
-            margin-block: 10px;
+            padding: rem(3px) rem(6px);
+            margin-block: rem(10px);
             &:hover {
                 color: white;
                 background-color: #243757;
