--- a/frontend/src/assets/styles/cmps/_sideBar.scss
+++ b/frontend/src/assets/styles/cmps/_sideBar.scss
@@ -164,7 +164,7 @@
             }
         }
         .colors-option {
-            margin-top: rem(10px);
+            margin-top: (10px);
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -172,7 +172,7 @@
                 background-color: #dfe1e6;
                 background-size: cover;
                 border-radius: rem(8px);
-                height: remm(80px);
+                height: rem(80px);
                 margin-bottom: rem(8px);
                 width: rem(130px);
                 cursor: pointer;
