--- a/frontend/src/assets/styles/main.scss
+++ b/frontend/src/assets/styles/main.scss
@@ -13,6 +13,7 @@
 @import "cmps/Header";
 @import "cmps/group";
 @import "cmps/taskPreview";
+@import "cmps/taskDetailsMobile";
 @import "cmps/taskDetails";
 @import "cmps/groupOptions";
 @import "cmps/taskOptions";
