--- a/frontend/src/assets/styles/basics/_base.scss
+++ b/frontend/src/assets/styles/basics/_base.scss
@@ -18,7 +18,7 @@ body {
     height: 98vh;
     overflow-y: hidden;
     &::-webkit-scrollbar {
-        width: 5px;
+        height: 7px;
     }
     &::-webkit-scrollbar-thumb {
         border-radius: 10px;
