--- a/frontend/src/assets/styles/cmps/_taskDetails.scss
+++ b/frontend/src/assets/styles/cmps/_taskDetails.scss
@@ -164,7 +164,7 @@
         min-height: 500px;
         position: initial;
         .menu {
-            visibility: hidden;
+            display: none;
         }
     }
     .cover {
@@ -172,7 +172,7 @@
         min-width: 50px;
         align-items: flex-end;
         justify-content: space-between;
-        margin-bottom: 20px;
+        // margin-bottom: 5px;
         .btn-cover {
             background-color: rgba(0, 0, 0, .08);
             color: #172b4d;
