--- a/frontend/src/assets/styles/cmps/_taskDetailsMobile.scss
+++ b/frontend/src/assets/styles/cmps/_taskDetailsMobile.scss
@@ -173,7 +173,7 @@
     // min-height: 500px;
     overflow: auto;
     .menu {
-        visibility: visible;
+        display: initial;
         align-items: center;
         margin-bottom: 10px;
         h3 {
