--- a/frontend/src/assets/styles/cmps/_taskPreview.scss
+++ b/frontend/src/assets/styles/cmps/_taskPreview.scss
@@ -63,6 +63,7 @@
         text-decoration: none;
         margin: 0 rem(6px) rem(4px);
         h5 {
+            padding-block:3px ;
             font-weight: 400;
             color: #00395aec;
             text-decoration: none;
